Enhance button hover styles by adding !important to ensure visibility

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,13 +11,13 @@ body {
 }
 
 .bit-button:hover {
-  @apply text-red-700;
-  @apply border-red-700;
+  @apply text-red-700 !important;
+  @apply border-red-700 !important;
   opacity: 1 !important;
 }
 
 .bit-play-my-city-cta:hover {
-  @apply text-red-700;
-  @apply border-red-700;
+  @apply text-red-700 !important;
+  @apply border-red-700 !important;
   opacity: 1 !important;
 }
